// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionPicker /> snapshot should match snapshot 1`] = `
<ReactionPicker
  aria-label="test-aria-label"
  ariaToolbarItemsSize={0}
>
  <AriaToolbar
    aria-label="test-aria-label"
    ariaToolbarItemsSize={0}
    className="md-reaction-picker-wrapper"
    orientation="horizontal"
  >
    <div
      aria-label="test-aria-label"
      aria-orientation="horizontal"
      className="md-reaction-picker-wrapper md-aria-toolbar-wrapper"
      role="toolbar"
    />
  </AriaToolbar>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with children 1`] = `
<ReactionPicker
  aria-label="test-aria-label"
  ariaToolbarItemsSize={1}
>
  <AriaToolbar
    aria-label="test-aria-label"
    ariaToolbarItemsSize={1}
    className="md-reaction-picker-wrapper"
    orientation="horizontal"
  >
    <div
      aria-label="test-aria-label"
      aria-orientation="horizontal"
      className="md-reaction-picker-wrapper md-aria-toolbar-wrapper"
      role="toolbar"
    >
      <ForwardRef
        itemIndex={0}
      >
        <ReactionButton
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPress={[Function]}
          tabIndex={0}
          useNativeKeyDown={true}
        >
          <ButtonCircle
            className="md-reaction-button-wrapper"
            data-reacted={false}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onPress={[Function]}
            size={32}
            stopPropagation={false}
            tabIndex={0}
            useNativeKeyDown={true}
            variant="tertiary"
          >
            <Button
              className="md-button-circle-wrapper md-reaction-button-wrapper"
              color="default"
              data-reacted={false}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onPointerDown={[Function]}
              onPointerUp={[Function]}
              size={32}
              tabIndex={0}
              useNativeKeyDown={true}
              variant="tertiary"
            >
              <mdc-button
                class="md-button-circle-wrapper md-reaction-button-wrapper"
                data-reacted={false}
                onPointerDown={[Function]}
                onPointerUp={[Function]}
                suppressHydrationWarning={true}
                useNativeKeyDown={true}
              />
            </Button>
          </ButtonCircle>
        </ReactionButton>
      </ForwardRef>
    </div>
  </AriaToolbar>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with className 1`] = `
<ReactionPicker
  aria-label="test-aria-label"
  ariaToolbarItemsSize={0}
  className="example-class"
>
  <AriaToolbar
    aria-label="test-aria-label"
    ariaToolbarItemsSize={0}
    className="example-class md-reaction-picker-wrapper"
    orientation="horizontal"
  >
    <div
      aria-label="test-aria-label"
      aria-orientation="horizontal"
      className="example-class md-reaction-picker-wrapper md-aria-toolbar-wrapper"
      role="toolbar"
    />
  </AriaToolbar>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with id 1`] = `
<ReactionPicker
  aria-label="test-aria-label"
  ariaToolbarItemsSize={0}
  id="example-id"
>
  <AriaToolbar
    aria-label="test-aria-label"
    ariaToolbarItemsSize={0}
    className="md-reaction-picker-wrapper"
    id="example-id"
    orientation="horizontal"
  >
    <div
      aria-label="test-aria-label"
      aria-orientation="horizontal"
      className="md-reaction-picker-wrapper md-aria-toolbar-wrapper"
      id="example-id"
      role="toolbar"
    />
  </AriaToolbar>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with style 1`] = `
<ReactionPicker
  aria-label="test-aria-label"
  ariaToolbarItemsSize={0}
  style={
    Object {
      "color": "pink",
    }
  }
>
  <AriaToolbar
    aria-label="test-aria-label"
    ariaToolbarItemsSize={0}
    className="md-reaction-picker-wrapper"
    orientation="horizontal"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      aria-label="test-aria-label"
      aria-orientation="horizontal"
      className="md-reaction-picker-wrapper md-aria-toolbar-wrapper"
      role="toolbar"
      style={
        Object {
          "color": "pink",
        }
      }
    />
  </AriaToolbar>
</ReactionPicker>
`;
